added first points

--- a/contents/compelling/theory.tex
+++ b/contents/compelling/theory.tex
@@ -1,1 +1,15 @@
 \subsection*{}
+necesidad para el usuario
+facil de entender
+agradable
+no enganar
+fundamental para la vida diaria
+mejora para sus tareas diarias
+personalizacion
+nivel alto de detalle sin datos personales
+actual
+Herramientas necesarias para que el usuario entienda la informacion y de porque
+formato adecuado para un amplio espectro de usuarios
+Crear familiaridad
+Ligar la informacion a la resolucion de problemas comunes
+Flexibilidad de seleccion de subdata
