--- a/contents/relevant/theory.tex
+++ b/contents/relevant/theory.tex
@@ -1,1 +1,8 @@
 \subsection*{}
+Informacion precisa
+Datos contrastados
+Herramientas necesarias para que el usuario entienda la informacion y de porque
+No decoracion que ensucie o distraiga de la informacion principal
+Consecuente, que siga una secuencia logica
+Estudio de las representaciones mas adecuadas para cada tipo de datos
+fuentes fiables, actualizacion periodica
