--- a/contents/compelling/theory.tex
+++ b/contents/compelling/theory.tex
@@ -1,15 +1,37 @@
 \subsection*{}
-necesidad para el usuario
-facil de entender
-agradable
-no enganar
-fundamental para la vida diaria
-mejora para sus tareas diarias
-personalizacion
-nivel alto de detalle sin datos personales
-actual
-Herramientas necesarias para que el usuario entienda la informacion y de porque
-formato adecuado para un amplio espectro de usuarios
-Crear familiaridad
-Ligar la informacion a la resolucion de problemas comunes
-Flexibilidad de seleccion de subdata
+Una vez demostrada la relevancia, beneficios y ventajas de la utilizacion de los datos por parte del usuario, es necesario un trabajo minucioso para
+transmitir estos conceptos al usuario de forma clara, sencilla y directa y asi lograr un vinculo que haga crecer el deseo del usuario de profundizar en la materia y
+mantenerse informado. 
+Solo si el usuario entiende la relevancia de los datos y la influencia que estos tienen en su vida diaria, sera posible un compromiso por parte de este.
+
+Para conseguir este objetivo, es importante reflejar la informacion de una manera atractiva tanto desde un punto de vista conceptual como funcional, 
+es decir, dejando claro la implicacion de los datos y reflejandolos con una correcta presentacion, que guie al usuario de una manera logica y estructurada.
+
+Desde un punto de vista conceptual, la informacion debera cubrir una necesidad del usuario, aunque el usuario no sepa a priori que tiene esta necesidad.
+Es decir, aqui entra en juego la representacion de la informacion de una manera que despierte la necesidad de monitorizacion de los datos por parte
+del usuario.
+
+[....].
+\begin{itemize}
+
+\item usuario no sabe que tiene la necesidad
+\item necesidad para el usuario
+\item fundamental para la vida diaria
+\item mejora para sus tareas diarias
+\item personalizacion
+\item Ligar la informacion a la resolucion de problemas comunes
+\item \end{itemize}
+
+Desde un punto de vista funcional se deberan repetar las siguientes premisas
+
+\begin{itemize}
+\item facil de entender
+\item agradable
+\item no enganar
+\item nivel alto de detalle sin datos personales
+\item actual
+\item Herramientas necesarias para que el usuario entienda la informacion y de porque
+\item formato adecuado para un amplio espectro de usuarios
+\item Crear familiaridad
+\item Flexibilidad de seleccion de subdata
+  \end{itemize}
