--- a/contents/conclusion.tex
+++ b/contents/conclusion.tex
@@ -1,2 +1,8 @@
 \section*{Conclusion}
--General conclusion, recapitulation, main points, future work, where is available
+\begin{itemize}
+    \item -General conclusion,
+    \item recapitulation,
+    \item main points,
+    \item future work,
+    \item where is available
+\end{itemize}
