--- a/contents/evaluation.tex
+++ b/contents/evaluation.tex
@@ -1,4 +1,6 @@
 \section*{Evaluation}
-{ Methodology, Results } / 
--Enquete, real test results...
--Analysis of the results
+\begin{itemize}
+   \item  { Methodology, Results } / 
+   \item   -Enquete, real test results...
+   \item   -Analysis of the results   
+\end{itemize}
