--- a/contents/relevant/theory.tex
+++ b/contents/relevant/theory.tex
@@ -1,8 +1,11 @@
 \subsection*{}
-Informacion precisa
-Datos contrastados
-Herramientas necesarias para que el usuario entienda la informacion y de porque
-No decoracion que ensucie o distraiga de la informacion principal
-Consecuente, que siga una secuencia logica
-Estudio de las representaciones mas adecuadas para cada tipo de datos
-fuentes fiables, actualizacion periodica
+\begin{itemize}
+
+    \item Informacion precisa
+    \item Datos contrastados
+    \item Herramientas necesarias para que el usuario entienda la informacion y de porque
+    \item No decoracion que ensucie o distraiga de la informacion principal
+    \item Consecuente, que siga una secuencia logica
+    \item Estudio de las representaciones mas adecuadas para cada tipo de datos
+    \item fuentes fiables, actualizacion periodica
+\end{itemize}
