working on ideas

--- a/contents/accessible/theory.tex
+++ b/contents/accessible/theory.tex
@@ -1,2 +1,11 @@
 \subsection*{}
---Theory
+\begin{itemize}
+
+    \item datos disponible
+    \item no substraible por el usuario medio
+    \item imposible de tratar sin una estructura
+    \item no es posible de tener un historico
+    \item sin informacion complementaria que muestre informacion util
+    \item Desperdicio
+    \item \end{itemize}
+    
