--- a/contents/compelling/theory.tex
+++ b/contents/compelling/theory.tex
@@ -22,10 +22,19 @@ del usuario.
 \item Ligar la informacion a la resolucion de problemas comunes
 \item \end{itemize}
 
-Desde un punto de vista funcional se deberan repetar las siguientes premisas
+Desde un punto de vista funcional se ha de tener en cuante, que para lograr el mayor alcance de usuarios, de distintos tipos, se han
+de repetar las siguientes premisas,  la informacion debe ser presentada en un formato facil de entender por
+el usuario, de una forma logica, que respete un order, es decir, de menos detalles a mas, que le de la posibilidad al usuario de indagar por si mismo, como
+si la redaccion de una novela se tratara.
+La representacion debe estar fuera de toda ambiguidad, no mostrar informacion que resulte enganosa o que haya que dedicar demasiado tiempo fijandonos
+en los detalles para poder interpretarla correctamente.
+Ademas se debera buscar la manera de presentar la informacion de una manera armonica y agradable para el usuario.
+Al represnentar la informacion sera incluido lo basicamente necesario, huyendo siempre de graficas recargadas que solo aporten ruido a la represetacion.
+
 
 \begin{itemize}
 \item facil de entender
+\item Analisis del publico al que va dirijido
 \item agradable
 \item no enganar
 \item nivel alto de detalle sin datos personales
