some ideas for the accesible point

--- a/contents/accessible/theory.tex
+++ b/contents/accessible/theory.tex
@@ -1,4 +1,17 @@
 \subsection*{}
+Con el paso de los annos hemos visto en el procesado de los datos una oportunidad de oro, tanto para mejora nuestra vida diaria como para intentar predecir
+eventos futuros. Por esta razon, surge la tendecia de almacenar todos los datos que tenemos a nuestro alrededor con la esperanza de que algun dia sean tratados.
+Como por el momento no tienen ningun fin en concreto, se almacena competamente todo, sin discriminacion.
+Por otra parte, multiples empresas tanto publicas como privadas, incluidas nuestros gobiernos, en su compromiso por la transparecia, publican estos datos periodicamente.
+Sin embargo, el usuario medio, no tiene ni los conocimientos, herramientas e infraestructuras para extraer informacion de estos datos.
+
+--Datos automatizados -- formato maquina
+--almacenamiento
+--conocimientos informaticos
+--analiticos
+--estudio de la materia, ver que es importante o no, contrastarlo
+--equipo multidisciplinario
+--informaticos no son expertos en medicina, por ejemplo.
 \begin{itemize}
 
     \item datos disponible
