some ideas for the accesible point

--- a/contents/accessible/theory.tex
+++ b/contents/accessible/theory.tex
@@ -4,6 +4,16 @@ eventos futuros. Por esta razon, surge la tendecia de almacenar todos los datos 
 Como por el momento no tienen ningun fin en concreto, se almacena competamente todo, sin discriminacion.
 Por otra parte, multiples empresas tanto publicas como privadas, incluidas nuestros gobiernos, en su compromiso por la transparecia, publican estos datos periodicamente.
 Sin embargo, el usuario medio, no tiene ni los conocimientos, herramientas e infraestructuras para extraer informacion de estos datos.
+Por lo tanto, no podemos decir que estos datos sean accesibles de una forma util para el usuario medio.
+
+Normalmente se publican periodicamente los datos mas recientes, es decir, los historicos de los datos no se publican, haciendo imposible comparaciones
+en el paso del tiempo.
+
+Para poder ofrecer una informacion util, estos datos deberan ser analizados, discriminados y ofrecidos a los usuarios de una manera directa.
+
+--no plataformas de pago
+-no instalacion de software
+-no complicaciones por parte del usuario.
 
 --Datos automatizados -- formato maquina
 --almacenamiento
