working on the intro

--- a/contents/introduction/motivation.tex
+++ b/contents/introduction/motivation.tex
@@ -1,2 +1,33 @@
 \subsection*{}
---I am the motivation
+Con el paso de los annos hemos visto en el procesado de los datos una oportunidad de oro, tanto para mejora nuestra vida diaria como para intentar predecir
+eventos futuros. Por esta razon, surge la tendecia de almacenar todos los datos que tenemos a nuestro alrededor con la esperanza de que algun dia sean tratados.
+Como por el momento no tienen ningun fin en concreto, se almacena competamente todo, sin discriminacion.
+Por otra parte, multiples empresas tanto publicas como privadas, incluidas nuestros gobiernos, en su compromiso por la transparecia y esperanza de sacarle provecho, publican estos datos periodicamente.
+
+Aunque estos datos esten disponibles publicamente, no significa que sean provechosos para el usuario medio, ya que se enfrenta a multiples retos.
+\begin{itemize}
+    \item Localizacion. Los datos se encuentran disponibles en portales de datos abiertos organizados y estructurados, normalmente se necesita una tarea de busqueda y seleccion
+    a veces complicada. Aunque las empresas ponen cada vez mas de su parte en ofrecer una interfaz agradable y funcial a los usuarios, esta tarea requiere de un trabajo de investigacion por parte del usuario,
+    ya que posiblemente, debera buscar en distintos portales.
+    \item Accesibilidad. Los datos suelen estan disponibles a traves de una interfaz de programacion de aplicaciones (API) no facilmente interpretable por el usuario medio. Normalmente cuenta con un documento que describe
+    cada uno de los campos y valores que se presentan en el documento y como utilizar la API.
+    \item Interpretabilidad. Usualmente los datos estan representados en un formato para ser procesado por algun software, por lo que sera imposible de leer por el usuario medio,
+    en el mejor de los casos, estaran representados en una tabla y aun asi, sera muy dificil de extraer los datos relevantes.
+    \item Almacenamiento. Los datos publicados son los mas recientes, por lo que no hay manera de obtener un historico de los datos si no son almacenados periodicamente. Una vez extraidos los datos, el usuario debera 
+    contar con una infraestructura que le permita almacenar los datos.
+    \item Automatizacion. Este proceso tiende a ser arduo, por lo que sera necesario automatizarlo, de otra forma el esfuerzo requerido por el usuario para extraer la informacion no le compensara.
+     
+\end{itemize}
+
+Por lo tanto, no podemos decir que estos datos sean accesibles de una forma util para el usuario medio. Los datos deberan ser analizados, discriminados y ofrecidos a los usuarios de una manera directa ya que este no 
+cuenta con los conocimientos e infraestructura para poder implementar una representacion de los datos que le sea util.
+
+Suponiendo que los datos que buscamos estan disponibles, empieza la tarea de interpretacion de los datos. Ya que se deberan tener conocimientos especificos en la materia para poder comprender los valores
+representados en estos datos.
+
+
+
+----Respecto a polucion del aire 
+Acudir a fuentes privadas
+Instalacion de dispositivos
+Ejemplos de bases de datos de distintas ciudades capitales
