working on intro, accesibility

--- a/chapter.tex
+++ b/chapter.tex
@@ -1,6 +1,8 @@
 \documentclass[final,2p,times]{elsarticle}
 
 \usepackage{hyperref}
+\usepackage{tikz}
+\usetikzlibrary{arrows, decorations.markings}
 \usepackage[utf8]{inputenc}
 
 \journal{Intelligent Environmental Data Analysis and Pollution Management}
