working on accesible and motivation

--- a/chapter.tex
+++ b/chapter.tex
@@ -1,5 +1,5 @@
-\documentclass[final,2p,times]{elsarticle}
-
+\documentclass[final,times]{elsarticle}
+\usepackage{framed}
 \usepackage{hyperref}
 \usepackage{tikz}
 \usetikzlibrary{arrows, decorations.markings}
