--- a/contents/evaluation.tex
+++ b/contents/evaluation.tex
@@ -1,4 +1,4 @@
-\section*{Evaluation}
+\section{Evaluation}
 \begin{itemize}
    \item  { Methodology, Results } / 
    \item   -Enquete, real test results...
