--- a/contents/introduction.tex
+++ b/contents/introduction.tex
@@ -1,4 +1,4 @@
-\section*{Introduction}
+\section{Introduction}
 \input{contents/introduction/introduction.tex}
 \input{contents/introduction/motivation.tex}
 \input{contents/introduction/methodology.tex}
