--- a/contents/introduction/methodology.tex
+++ b/contents/introduction/methodology.tex
@@ -1,2 +1,6 @@
-\subsection*{}
----The structure of this chapter
+\subsection*{Structure}
+En este capitulo vamos a ver como hacer los datos accesibles, relevantes y atractivos para 
+el usuario medio. Para cada uno de los apartadados, vamos a ver la teoria, como se ha aplicado
+en el projecto Aire Guru y su evaluacion.
+A continuacion, veremos una evaluacion general de estos tres conceptos y para terminar las 
+conclusiones obtenidas.
