--- a/contents/relevant.tex
+++ b/contents/relevant.tex
@@ -1,4 +1,4 @@
-\section*{Relevant}
+\section{Relevant}
 \input{contents/relevant/theory.tex}
 \input{contents/relevant/practical.tex}
 \input{contents/relevant/evaluation.tex}
