--- a/contents/accessible.tex
+++ b/contents/accessible.tex
@@ -1,4 +1,4 @@
-\section*{Accessible}
+\section{Accessible}
 \input{contents/accessible/theory.tex}
 \input{contents/accessible/practical.tex}
 \input{contents/accessible/evaluation.tex}
