--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -1,4 +1,4 @@
-\section*{Compelling}
+\section{Compelling}
 \input{contents/compelling/theory.tex}
 \input{contents/compelling/practical.tex}
 \input{contents/compelling/evaluation.tex}
