--- a/contents/introduction/motivation.tex
+++ b/contents/introduction/motivation.tex
@@ -4,20 +4,19 @@ tanto para mejora nuestra vida diaria como para intentar predecir
 eventos futuros. Por esta razon, surge la tendecia de almacenar todos los datos que tenemos 
 a nuestro alrededor con la esperanza de que algun dia sean tratados.
 Como por el momento no tienen ningun fin en concreto, se almacena competamente todo, sin discriminacion.
-Sin saber si en algun momento seran utiles o no.
+Sin saber si en algun momento seran utiles o no.\\
+
 Por otra parte, multiples empresas tanto publicas como privadas, incluidas nuestros gobiernos, 
-en su compromiso por la transparecia y/o esperanza de sacarle provecho, publican estos datos periodicamente.
+en su compromiso por la transparecia y/o esperanza de sacarle provecho, publican estos datos 
+periodicamente.\\
 
 Aunque estos datos esten disponibles para todos los usuarios, no significa que sean provechosos para el 
-usuario medio, ya que se enfrenta a multiples retos.
+usuario medio, ya que se enfrenta a multiples retos.\\
 
 En los siguientes apartados se realizar un recorrido por las etapas necesarias para hacer estos datos
 accesibles, relevantes y atractivos para el usuario medio.
-
 El objetivo de este capitulo es estipular los puntos necesarios para usar los datos de una manera provechosa y
-que nos ayude en nuestro dia a dia de una forma util.
-
-Estos conceptos se han aplicado en el proyecto Aire Guru, que acerca los datos a los usuarios de una manera
+que nos ayude en nuestro dia a dia de una forma util. Estos conceptos se han aplicado en el proyecto Aire Guru, que acerca los datos a los usuarios de una manera
 facil, amigable, compresible y adaptados a sus necesidades.
 
 
